syntax = "proto2";

package com.bilibili.sycpb.flink.api;
option java_package = "com.bilibili.sycpb.flink.api";
option java_outer_classname = "AvidAttributeProfile";

message AvidAttribute {
    required int64 mid = 1;
    optional int32 tid = 2;
    optional int32 sub_tid = 3;
    repeated int64 tags = 4;
    optional int32 video_duration = 5;
    optional int32 is_bussiness	= 6;
    optional int32 ner_cid1 = 7;
    optional int32 ner_cid2 = 8;
    repeated int32 ner_entity_cates = 9;
    optional int32 game_cid1 = 10;
    optional int32 game_cid2 = 11;
    repeated int32 game_entity_cates = 12;
    repeated int32 game_platform = 13;
    repeated int32 game_play = 14;
    repeated int32 game_ip = 15;
    repeated int32 game_theme = 16;
    repeated int32 game_style = 17;
    repeated int32 game_element = 18;
    optional string tag_title=19;
    optional string avid_title=20;
    optional string content=21;

}